Tue Jul 23 19:34:11 2013  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.h, thread_win32.h: rename rb_thread_id_t to
	  rb_nativethread_id_t.

	* thread_pthread.c, vm_core.h: use rb_nativethread_id_t.

Tue Jul 23 18:56:11 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/openssl/ossl.c: use system native (system provided)
	  thread locking APIs added by last commit.
	  This patch fixes [Bug #8386].
	  "rb_mutex_*" APIs control only "Ruby" threads.
	  Not for native threads.

Tue Jul 23 18:44:15 2013  Koichi Sasada  <ko1@atdot.net>

	* thread_native.h: added.
	  Move native thread related lines from vm_core.h.
	  And declare several functions "rb_nativethread_lock_*",
	  manipulate locking.

	* common.mk: add thread_native.h.

	* thread.c: add functions "rb_nativethread_lock_*".

	* thraed.c, thread_[pthread,win32].[ch]: rename rb_thread_lock_t
	  to rb_nativethread_lock_t to make it clear that this lock is for
	  native thraeds, not for ruby threads.

Tue Jul 23 16:14:57 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_sweep): fix spacing.

Tue Jul 23 15:57:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_get_freeobj): clear slot->freelist here.
	  This means that this slot doesn't have any free objects.
	  And store this slot with objspace->heap.using_slot.

	* gc.c (gc_before_sweep): restore objspace->freelist
	  into objspace->heap.using_slot->freelist.
	  This means that using_slot has free objects which are
	  pointed from objspace->freelist.

	* gc.c (gc_slot_sweep): do not need to clear slot->freelist.

Tue Jul 23 09:34:49 2013  Zachary Scott  <e@zzak.io>

	* sample/drb/README*.rdoc: [DOC] migrate DRb sample READMEs to rdoc

Tue Jul 23 09:28:05 2013  Zachary Scott  <e@zzak.io>

	* lib/drb/invokemethod.rb: [DOC] nodoc InvokeMethod18Mixin

Tue Jul 23 08:44:37 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_asn1.c (asn1time_to_time):  Implement YYMMDDhhmmZ
	  format for ASN.1 UTCTime.  [ruby-trunk - Bug #8664]