@@ -11,6 +11,8 @@
 
 RUBY_SYMBOL_EXPORT_BEGIN
 
+rb_nativethread_id_t rb_nativethread_self();
+
 void rb_nativethread_lock_initialize(rb_nativethread_lock_t *lock);
 void rb_nativethread_lock_destroy(rb_nativethread_lock_t *lock);
 void rb_nativethread_lock_lock(rb_nativethread_lock_t *lock);
